# pythonisms

pythonisms/: README.md  pyproject.toml
pythonisms/pythonisms/: decorators.py  pythonisms.py
pythonisms/tests/: test_pythonisms.py
