[tool.poetry]
name = "pythonisms"
version = "0.1.0"
description = ""
authors = ["Sian <sianculligan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = {version = "^21.4b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
